piishield_k8s/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: piishield
  labels:
    app: piishield
